# gardena-smart-local-api

./: .gitignore  CONTRIBUTING.md  README.md  REUSE.toml  pyproject.toml
.github/workflows/: ci.yml  compliance.yml  docs.yml  publish.yml
doc/gen1/: capacitive_moisture_sensor-1.2.2-dev-g55b3229_icd.html  epp-2.2.1-dev-g55b3229_icd.html  ic24-2.5.0-dev-g55b3229_icd.html  mower_cbt2-2.5.1-dev-g55b3229_icd.html  mower_cbtg-2.5.1-dev-g55b3229_icd.html  mower_cbtg_production_test-0.1.0-dev-g55b3229_icd.html  mower_cbtl-2.6.0-dev-g55b3229_icd.html  power-3.0.3-dev-g55b3229_icd.html  rm-0.0.1-dev-g55b3229_icd.html  sensor-2.4.1-dev-g55b3229_icd.html  watering_computer-2.5.0-dev-g55b3229_icd.html
docs/: architecture.md  conf.py  examples.md  index.md  schema.md
gardena_smart_local_api/: messages.py  model_loader.py  resources.py  sgtin96.py  utils.py
gardena_smart_local_api/devices/: __init__.py  _enums.py  device.py  device_builder.py  errors.py  gen1.py  gen2.py  irrigation.py  mowers.py  power.py  sensors.py
gardena_smart_local_api/examples/: __init__.py  app.py  device.py  fota.py  inclusion.py  irrigation.py  mower.py  power.py  pump.py  sensor.py  valve.py
gardena_smart_local_api/schema/: 18845_sensor1.yaml  18869_water_control.yaml  19040_sensor2.yaml  22538_pump.yaml  2812_water_control.yaml  2814_water_control_duo.yaml  2826_pipeline_water_control.yaml  29694_sileno_city_life.yaml  31653_irrigation_control.yaml  35279_power.yaml  469_irrigation_control.yaml  488_sileno_pro_max_free.yaml  53988_sileno_city_life.yaml  53988_sileno_life.yaml  6146_sileno.yaml  device_models.yaml
gardena_smart_local_api/utils/: __init__.py  schedules.py
scripts/: ws_cli.py  ws_listener.py
smart_system_local/: model_loader.py  websocket_helper.py
smart_system_local/devices/: __init__.py  base.py  messages.py  sensor.py
smart_system_local/schema/: device_models.yaml  device_models_schema.json
smart_system_local/tests/: test_base_device.py  test_dynamic.py  test_messages.py  test_model_loader.py
tests/: conftest.py  test_epp.py  test_gen1.py  test_lowlevel_device.py  test_messages.py  test_model_loader.py  test_mower.py  test_power_adapter.py  test_resources.py  test_schedules.py  test_sensor1.py  test_sensor2.py  test_sgtin96.py  test_utils.py
tests/data/: devices.json  epp.json  power_adapter.json  sensor1.json  (+9 more)
(+5 files in other folders)
